--- a/the_movies_dataset/movies_data_engineering.ipynb
+++ b/the_movies_dataset/movies_data_engineering.ipynb
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_cbf = movies_cbf.drop(columns=['genres', 'revenue', 'year' ,'imdb_rating', 'imdb_num_votes', 'is_adult', 'runtime_minutes', 'budget','original_language' ,'popularity', 'tmdb_vote_count', 'tmdb_vote_avg'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>tags_full</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>toy story</td>\n",
+       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>pixar pixar pixar animation pixar animated fun...</td>\n",
+       "      <td>pixar pixar pixar animation pixar animated fun...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>jumanji</td>\n",
+       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
+       "      <td>Roll the dice and unleash the excitement!</td>\n",
+       "      <td>for children game animals joe johnston robin w...</td>\n",
+       "      <td>for children game animals joe johnston robin w...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>grumpier old men</td>\n",
+       "      <td>A family wedding reignites the ancient feud be...</td>\n",
+       "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
+       "      <td>funniest movies comedinha de velhinhos engraã ...</td>\n",
+       "      <td>funniest movies comedinha de velhinhos engraã ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>waiting to exhale</td>\n",
+       "      <td>Cheated on, mistreated and stepped on, the wom...</td>\n",
+       "      <td>Friends are the people who let you be yourself...</td>\n",
+       "      <td>girl movie comedy drama comedy drama comedy dr...</td>\n",
+       "      <td>girl movie comedy drama comedy drama comedy dr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>father of the bride part ii</td>\n",
+       "      <td>Just when George Banks has recovered from his ...</td>\n",
+       "      <td>Just When His World Is Back To Normal... He's ...</td>\n",
+       "      <td>steve martin pregnancy remake steve martin fam...</td>\n",
+       "      <td>steve martin pregcy remake steve martin family...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3878</th>\n",
+       "      <td>3948</td>\n",
+       "      <td>meet the parents</td>\n",
+       "      <td>Greg Focker is ready to marry his girlfriend, ...</td>\n",
+       "      <td>First comes love. Then comes the interrogation.</td>\n",
+       "      <td>ben stiller comedy hilarious owen wilson ben s...</td>\n",
+       "      <td>ben stiller comedy hilarious owen wilson ben s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3879</th>\n",
+       "      <td>3949</td>\n",
+       "      <td>requiem for a dream</td>\n",
+       "      <td>The hopes and dreams of four ambitious people ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ass to ass heroin psychology depressing drugs ...</td>\n",
+       "      <td>ass to ass heroin psychology depressing drugs ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3880</th>\n",
+       "      <td>3950</td>\n",
+       "      <td>tigerland</td>\n",
+       "      <td>A group of recruits go through Advanced Infant...</td>\n",
+       "      <td>The system wanted them to become soldiers. One...</td>\n",
+       "      <td>colin farrell drama drama drama drama drama</td>\n",
+       "      <td>colin farrell drama drama drama drama drama a ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3881</th>\n",
+       "      <td>3951</td>\n",
+       "      <td>two family house</td>\n",
+       "      <td>Buddy Visalo (Michael Rispoli) is a factory wo...</td>\n",
+       "      <td>The only way to find out what you love is to r...</td>\n",
+       "      <td>in netflix queue in netflix queue r drama dram...</td>\n",
+       "      <td>in netflix queue in netflix queue r drama dram...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3882</th>\n",
+       "      <td>3952</td>\n",
+       "      <td>contender, the</td>\n",
+       "      <td>The vice president is dead, and as the preside...</td>\n",
+       "      <td>Sometimes you can assassinate a leader without...</td>\n",
+       "      <td>politics vice president washington dc gary old...</td>\n",
+       "      <td>politics vice president washington dc gary old...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3883 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      movie_id                        title  \\\n",
+       "0            1                    toy story   \n",
+       "1            2                      jumanji   \n",
+       "2            3             grumpier old men   \n",
+       "3            4            waiting to exhale   \n",
+       "4            5  father of the bride part ii   \n",
+       "...        ...                          ...   \n",
+       "3878      3948             meet the parents   \n",
+       "3879      3949          requiem for a dream   \n",
+       "3880      3950                    tigerland   \n",
+       "3881      3951             two family house   \n",
+       "3882      3952               contender, the   \n",
+       "\n",
+       "                                               overview  \\\n",
+       "0     Led by Woody, Andy's toys live happily in his ...   \n",
+       "1     When siblings Judy and Peter discover an encha...   \n",
+       "2     A family wedding reignites the ancient feud be...   \n",
+       "3     Cheated on, mistreated and stepped on, the wom...   \n",
+       "4     Just when George Banks has recovered from his ...   \n",
+       "...                                                 ...   \n",
+       "3878  Greg Focker is ready to marry his girlfriend, ...   \n",
+       "3879  The hopes and dreams of four ambitious people ...   \n",
+       "3880  A group of recruits go through Advanced Infant...   \n",
+       "3881  Buddy Visalo (Michael Rispoli) is a factory wo...   \n",
+       "3882  The vice president is dead, and as the preside...   \n",
+       "\n",
+       "                                                tagline  \\\n",
+       "0                                                   NaN   \n",
+       "1             Roll the dice and unleash the excitement!   \n",
+       "2     Still Yelling. Still Fighting. Still Ready for...   \n",
+       "3     Friends are the people who let you be yourself...   \n",
+       "4     Just When His World Is Back To Normal... He's ...   \n",
+       "...                                                 ...   \n",
+       "3878    First comes love. Then comes the interrogation.   \n",
+       "3879                                                NaN   \n",
+       "3880  The system wanted them to become soldiers. One...   \n",
+       "3881  The only way to find out what you love is to r...   \n",
+       "3882  Sometimes you can assassinate a leader without...   \n",
+       "\n",
+       "                                                   tags  \\\n",
+       "0     pixar pixar pixar animation pixar animated fun...   \n",
+       "1     for children game animals joe johnston robin w...   \n",
+       "2     funniest movies comedinha de velhinhos engraã ...   \n",
+       "3     girl movie comedy drama comedy drama comedy dr...   \n",
+       "4     steve martin pregnancy remake steve martin fam...   \n",
+       "...                                                 ...   \n",
+       "3878  ben stiller comedy hilarious owen wilson ben s...   \n",
+       "3879  ass to ass heroin psychology depressing drugs ...   \n",
+       "3880        colin farrell drama drama drama drama drama   \n",
+       "3881  in netflix queue in netflix queue r drama dram...   \n",
+       "3882  politics vice president washington dc gary old...   \n",
+       "\n",
+       "                                              tags_full  \n",
+       "0     pixar pixar pixar animation pixar animated fun...  \n",
+       "1     for children game animals joe johnston robin w...  \n",
+       "2     funniest movies comedinha de velhinhos engraã ...  \n",
+       "3     girl movie comedy drama comedy drama comedy dr...  \n",
+       "4     steve martin pregcy remake steve martin family...  \n",
+       "...                                                 ...  \n",
+       "3878  ben stiller comedy hilarious owen wilson ben s...  \n",
+       "3879  ass to ass heroin psychology depressing drugs ...  \n",
+       "3880  colin farrell drama drama drama drama drama a ...  \n",
+       "3881  in netflix queue in netflix queue r drama dram...  \n",
+       "3882  politics vice president washington dc gary old...  \n",
+       "\n",
+       "[3883 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_cbf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
