user's favourite movies

--- a/the_movies_dataset/movies_data_engineering.ipynb
+++ b/the_movies_dataset/movies_data_engineering.ipynb
@@ -723,17 +723,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import string \n",
     "from string import punctuation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,11 +791,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies_cbf = movies_cbf.drop(columns=['genres', 'revenue', 'year' ,'imdb_rating', 'imdb_num_votes', 'is_adult', 'runtime_minutes', 'budget','original_language' ,'popularity', 'tmdb_vote_count', 'tmdb_vote_avg'])"
+    "movies_cbf = movies_cbf.drop(columns=['genres', 'revenue' ,'imdb_rating', 'imdb_num_votes', 'is_adult', 'runtime_minutes', 'budget','original_language' ,'popularity', 'tmdb_vote_count', 'tmdb_vote_avg'])"
    ]
   },
   {
@@ -1016,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
