--- a/content_based_filtering/content_based_filtering.ipynb
+++ b/content_based_filtering/content_based_filtering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tags = pd.read_csv('./the_movies_dataset/movies_cbf.csv',\n",
+    "tags = pd.read_csv('movies_cbf.csv',\n",
     "                   lineterminator='\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "4  steve martin pregcy remake steve martin family...  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "(3883, 7)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "3882       contender, the (2000)  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "  612])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
        "  3353])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "4         5  father of the bride part ii  father of the bride part ii (1995)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        "3882  [1852, 3936, 3455, 2438, 229, 1834, 3370, 882,...  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1010,7 @@
        "4        1      2355       5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
        "4    5  [2987, 2333, 1175, 2337, 1535, 1392, 866, 2770..."
       ]
      },
-     "execution_count": 17,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,10 +1138,271 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user                object\n",
+       "favourite_movies    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_favourite_movies.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>title_and_year</th>\n",
+       "      <th>similar_movies</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>toy story</td>\n",
+       "      <td>toy story (1995)</td>\n",
+       "      <td>[3114, 2355, 2294, 2354, 1064, 2078, 3754, 214...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>jumanji</td>\n",
+       "      <td>jumanji (1995)</td>\n",
+       "      <td>[56, 60, 126, 2162, 2161, 2005, 1967, 2399, 10...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>grumpier old men</td>\n",
+       "      <td>grumpier old men (1995)</td>\n",
+       "      <td>[7, 807, 1632, 1550, 3353, 3097, 3829, 3358, 3...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>waiting to exhale</td>\n",
+       "      <td>waiting to exhale (1995)</td>\n",
+       "      <td>[819, 1630, 1774, 106, 476, 2290, 568, 2239, 1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>father of the bride part ii</td>\n",
+       "      <td>father of the bride part ii (1995)</td>\n",
+       "      <td>[643, 651, 856, 2923, 1001, 739, 2155, 275, 38...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3878</th>\n",
+       "      <td>3948</td>\n",
+       "      <td>meet the parents</td>\n",
+       "      <td>meet the parents (2000)</td>\n",
+       "      <td>[643, 651, 856, 2923, 111, 1228, 1263, 1001, 7...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3879</th>\n",
+       "      <td>3949</td>\n",
+       "      <td>requiem for a dream</td>\n",
+       "      <td>requiem for a dream (2000)</td>\n",
+       "      <td>[778, 1884, 1921, 3168, 3678, 441, 770, 824, 8...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3880</th>\n",
+       "      <td>3950</td>\n",
+       "      <td>tigerland</td>\n",
+       "      <td>tigerland (2000)</td>\n",
+       "      <td>[770, 824, 826, 1155, 3145, 1222, 2562, 142, 1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3881</th>\n",
+       "      <td>3951</td>\n",
+       "      <td>two family house</td>\n",
+       "      <td>two family house (2000)</td>\n",
+       "      <td>[770, 824, 826, 1155, 3145, 3222, 309, 40, 374...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3882</th>\n",
+       "      <td>3952</td>\n",
+       "      <td>contender, the</td>\n",
+       "      <td>contender, the (2000)</td>\n",
+       "      <td>[1852, 3936, 3455, 2438, 229, 1834, 3370, 882,...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3883 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      movie_id                        title  \\\n",
+       "0            1                    toy story   \n",
+       "1            2                      jumanji   \n",
+       "2            3             grumpier old men   \n",
+       "3            4            waiting to exhale   \n",
+       "4            5  father of the bride part ii   \n",
+       "...        ...                          ...   \n",
+       "3878      3948             meet the parents   \n",
+       "3879      3949          requiem for a dream   \n",
+       "3880      3950                    tigerland   \n",
+       "3881      3951             two family house   \n",
+       "3882      3952               contender, the   \n",
+       "\n",
+       "                          title_and_year  \\\n",
+       "0                       toy story (1995)   \n",
+       "1                         jumanji (1995)   \n",
+       "2                grumpier old men (1995)   \n",
+       "3               waiting to exhale (1995)   \n",
+       "4     father of the bride part ii (1995)   \n",
+       "...                                  ...   \n",
+       "3878             meet the parents (2000)   \n",
+       "3879          requiem for a dream (2000)   \n",
+       "3880                    tigerland (2000)   \n",
+       "3881             two family house (2000)   \n",
+       "3882               contender, the (2000)   \n",
+       "\n",
+       "                                         similar_movies  \n",
+       "0     [3114, 2355, 2294, 2354, 1064, 2078, 3754, 214...  \n",
+       "1     [56, 60, 126, 2162, 2161, 2005, 1967, 2399, 10...  \n",
+       "2     [7, 807, 1632, 1550, 3353, 3097, 3829, 3358, 3...  \n",
+       "3     [819, 1630, 1774, 106, 476, 2290, 568, 2239, 1...  \n",
+       "4     [643, 651, 856, 2923, 1001, 739, 2155, 275, 38...  \n",
+       "...                                                 ...  \n",
+       "3878  [643, 651, 856, 2923, 111, 1228, 1263, 1001, 7...  \n",
+       "3879  [778, 1884, 1921, 3168, 3678, 441, 770, 824, 8...  \n",
+       "3880  [770, 824, 826, 1155, 3145, 1222, 2562, 142, 1...  \n",
+       "3881  [770, 824, 826, 1155, 3145, 3222, 309, 40, 374...  \n",
+       "3882  [1852, 3936, 3455, 2438, 229, 1834, 3370, 882,...  \n",
+       "\n",
+       "[3883 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "similar_movies_cbf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CBF: generate movie recommendations for each user"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def list_to_str(list_obj):\n",
+    "  \n",
+    "  \n",
+    "    # Converting string to list\n",
+    "    res = ini_list.strip('][').split(', ')\n",
+    "  \n",
+    "    # printing final result and its type\n",
+    "    print (\"final list\", res)\n",
+    "    print (type(res))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CBF_recommendations = user_favourite_movies.copy(deep=True)\n",
+    "\n",
+    "CBF_recommendations['CBF_recommendations'] = None \n",
+    "\n",
+    "count = 0\n",
+    "for index, row in CBF_recommendations.iterrows(): \n",
+    "  user_recommendations = []\n",
+    "  favourite_movies = row['favourite_movies']\n",
+    "\n",
+    "  for movie_id in favourite_movies: \n",
+    "    movie_id = int(movie_id)\n",
+    "    new_recommendations = similar_movies_cbf[similar_movies_cbf['movie_id'] == movie_id]\n",
+    "    new_recommendations = (new_recommendations['similar_movies'])    \n",
+    "    user_recommendations.extend(new_recommendations.values[0])\n",
+    "  \n",
+    "  # deduplicate\n",
+    "  user_recommendations = list(dict.fromkeys(user_recommendations))\n",
+    "  CBF_recommendations.at[index, 'CBF_recommendations'] = user_recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "784"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(CBF_recommendations.at[0, 'CBF_recommendations'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CBF_recommendations.to_csv('cbf_recommendations.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
