--- a/content based filtering/content_based_filtering.ipynb
+++ b/content based filtering/content_based_filtering.ipynb
@@ -1024,9 +1024,7 @@
    "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "users = list(ratings['user_id'].unique())"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1034,6 +1032,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "users = list(ratings['user_id'].unique())\n",
     "user_favourite_movies = pd.DataFrame(); \n",
     "user_favourite_movies['user'] = None\n",
     "user_favourite_movies['favourite_movies'] = None\n",
