--- a/ratings/notebooks/ratings_10_19.ipynb
+++ b/ratings/notebooks/ratings_10_19.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "\n",
-    "movies = pd.read_csv('https://raw.githubusercontent.com/nchichilidze/RS-with-GE/main/the_movies_dataset/movies_filled.csv')\n",
+    "movies = pd.read_csv('https://raw.githubusercontent.com/nchichilidze/RS-with-GE/main/movies/movies_filled.csv')\n",
     "ratings = pd.read_csv('https://raw.githubusercontent.com/nchichilidze/RS-with-GE/main/preprocessed_movielens_1m/ratings.csv')\n",
     "ratings = ratings.iloc[: , 1:]\n",
     "\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,111 +51,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>user_id</th>\n",
        "      <th>movie_id</th>\n",
-       "      <th>imdb_rating</th>\n",
-       "      <th>imdb_num_votes</th>\n",
-       "      <th>is_adult</th>\n",
-       "      <th>runtime_minutes</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>original_language</th>\n",
-       "      <th>popularity</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>tmdb_vote_count</th>\n",
-       "      <th>tmdb_vote_avg</th>\n",
+       "      <th>rating</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>953300</td>\n",
-       "      <td>0</td>\n",
-       "      <td>81</td>\n",
-       "      <td>30000000</td>\n",
-       "      <td>en</td>\n",
-       "      <td>155</td>\n",
-       "      <td>373554033</td>\n",
-       "      <td>15158</td>\n",
-       "      <td>8</td>\n",
+       "      <td>1193</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>333517</td>\n",
-       "      <td>0</td>\n",
-       "      <td>104</td>\n",
-       "      <td>65000000</td>\n",
-       "      <td>en</td>\n",
-       "      <td>18</td>\n",
-       "      <td>262797249</td>\n",
-       "      <td>8836</td>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>661</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>914</td>\n",
        "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>26811</td>\n",
-       "      <td>0</td>\n",
-       "      <td>101</td>\n",
-       "      <td>25000000</td>\n",
-       "      <td>en</td>\n",
-       "      <td>11</td>\n",
-       "      <td>71500000</td>\n",
-       "      <td>288</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3408</td>\n",
        "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>10757</td>\n",
-       "      <td>0</td>\n",
-       "      <td>124</td>\n",
-       "      <td>16000000</td>\n",
-       "      <td>en</td>\n",
-       "      <td>8</td>\n",
-       "      <td>81452156</td>\n",
-       "      <td>120</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2355</td>\n",
        "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>37343</td>\n",
-       "      <td>0</td>\n",
-       "      <td>106</td>\n",
-       "      <td>0</td>\n",
-       "      <td>en</td>\n",
-       "      <td>14</td>\n",
-       "      <td>76594107</td>\n",
-       "      <td>561</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   movie_id  imdb_rating  imdb_num_votes  is_adult  runtime_minutes    budget  \\\n",
-       "0         1            8          953300         0               81  30000000   \n",
-       "1         2            7          333517         0              104  65000000   \n",
-       "2         3            6           26811         0              101  25000000   \n",
-       "3         4            5           10757         0              124  16000000   \n",
-       "4         5            6           37343         0              106         0   \n",
-       "\n",
-       "  original_language  popularity    revenue  tmdb_vote_count  tmdb_vote_avg  \n",
-       "0                en         155  373554033            15158              8  \n",
-       "1                en          18  262797249             8836              7  \n",
-       "2                en          11   71500000              288              6  \n",
-       "3                en           8   81452156              120              6  \n",
-       "4                en          14   76594107              561              6  "
+       "   user_id  movie_id  rating\n",
+       "0        1      1193       5\n",
+       "1        1       661       3\n",
+       "2        1       914       3\n",
+       "3        1      3408       4\n",
+       "4        1      2355       5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +262,7 @@
        "4               95  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +449,7 @@
        "4                  1          14   76594107              561              6  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +471,7 @@
        "Name: original_language, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +514,7 @@
     "    \n",
     "    is_english = movie_data['original_language']\n",
     "    budget = movie_data['budget']\n",
-    "    popularity = movie_data['budget']\n",
+    "    popularity = movie_data['popularity']\n",
     "    TMDB_rating = movie_data['tmdb_vote_avg']\n",
     "    TMDB_votes = movie_data['tmdb_vote_count']\n",
     "    revenue = movie_data['revenue']\n",
@@ -584,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +572,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>6500000</td>\n",
-       "      <td>6500000</td>\n",
+       "      <td>16</td>\n",
        "      <td>6</td>\n",
        "      <td>760</td>\n",
        "      <td>30218387</td>\n",
@@ -639,7 +584,7 @@
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>3705538</td>\n",
-       "      <td>3705538</td>\n",
+       "      <td>15</td>\n",
        "      <td>6</td>\n",
        "      <td>561</td>\n",
        "      <td>62548947</td>\n",
@@ -651,7 +596,7 @@
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>800000</td>\n",
-       "      <td>800000</td>\n",
+       "      <td>7</td>\n",
        "      <td>7</td>\n",
        "      <td>309</td>\n",
        "      <td>5034794</td>\n",
@@ -663,7 +608,7 @@
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>12000000</td>\n",
-       "      <td>12000000</td>\n",
+       "      <td>14</td>\n",
        "      <td>7</td>\n",
        "      <td>678</td>\n",
        "      <td>30036000</td>\n",
@@ -675,7 +620,7 @@
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>10500000</td>\n",
-       "      <td>10500000</td>\n",
+       "      <td>35</td>\n",
        "      <td>7</td>\n",
        "      <td>9331</td>\n",
        "      <td>792965500</td>\n",
@@ -686,11 +631,11 @@
       ],
       "text/plain": [
        "         user_id  movie_id  rating  is_english    budget  popularity  \\\n",
-       "1000204     6040      1091       1           1   6500000     6500000   \n",
-       "1000205     6040      1094       5           1   3705538     3705538   \n",
-       "1000206     6040       562       5           1    800000      800000   \n",
-       "1000207     6040      1096       4           1  12000000    12000000   \n",
-       "1000208     6040      1097       4           1  10500000    10500000   \n",
+       "1000204     6040      1091       1           1   6500000          16   \n",
+       "1000205     6040      1094       5           1   3705538          15   \n",
+       "1000206     6040       562       5           1    800000           7   \n",
+       "1000207     6040      1096       4           1  12000000          14   \n",
+       "1000208     6040      1097       4           1  10500000          35   \n",
        "\n",
        "         TMDB_rating  TMDB_votes    revenue  \n",
        "1000204            6         760   30218387  \n",
@@ -700,7 +645,7 @@
        "1000208            7        9331  792965500  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
